kubernetes/apps/network/pihole/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
spec:
  hostnames: ["piholek.davidstewen.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pihole-web
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
